[package]
name = "entropia-orme"
version.workspace = true
description = "EntropiaOrme: an analytical desktop tool for Entropia Universe."
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "entropia_orme_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# `e2e-stub` compiles in the native-shell e2e suite's deterministic backend stub
# at the `api_request` IPC boundary (see src/e2e_stub.rs). The e2e build embeds
# the frontend and drives it at the app's own tauri:// origin, which has native
# IPC, so no remote-origin grant is needed. Enabled ONLY by the e2e build
# (`tauri build --features e2e-stub`); dev and release never enable it, so the
# shipped binary is byte-for-byte unaffected.
[features]
e2e-stub = []

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-store = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eo-http = { workspace = true }
# The composition root constructs the ported services the substrate's
# native routes read through.
eo-services = { workspace = true }
# The composition root owns the SSE fan-out hub and bridges the producer
# bus's domain topics onto it (the `/api/events` stream serves over it).
eo-wire = { workspace = true }
# The capture-PNG IPC command base64-encodes the raw image bytes into an
# `<img>` data URL (the route returns raw bytes, excluded from the JSON
# `api_request` envelope).
base64 = { workspace = true }
tokio = { workspace = true }
# The composition root discharges the ONNX Runtime obligations the
# recogniser depends on: it pins the bundled dylib to an absolute path
# (`ort::init_from`) and configures the execution-provider ladder before
# any session is built. The recogniser itself (in eo-services) stays
# EP-agnostic; the runtime wiring is a composition-root concern.
ort = { workspace = true }
# The composition root installs the process-wide tracing subscriber: a fmt
# layer, an env-filter, and the metrics-aggregating layer that turns sqlx
# query events into database-latency samples in the in-process registry.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# Test-only: the composition-integration and concurrency tests assert
# directly against the substrate's database pool and build a frozen clock.
sqlx = { workspace = true }
chrono = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging"
] }
