[package]
name = "eo-wire"
version.workspace = true
description = "Wire-format contracts for the EntropiaOrme backend: response and event types and their serialisation."
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ryu = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
base64 = { workspace = true }

[features]
# Tests that shell out to the Python oracle at runtime (the differential
# fuzz). Off by default so the hermetic Rust CI jobs need no Python; the
# cross-language CI job and the local equivalence runner enable it.
cross-language = []
